--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -117,6 +117,8 @@ jobs:
           popd
           zip -r groonga-${version}.zip groonga-${version}
           rm -rf groonga-${version}
+          echo "groonga-${version}.tar.gz" >> "groonga-${version}.artifact"
+          echo "groonga-${version}.zip" >> "groonga-${version}.artifact"
 
       # Artifact
       - uses: actions/upload-artifact@v4
@@ -125,6 +127,10 @@ jobs:
           path: |
             groonga-*.tar.gz
             groonga-*.zip
+      - uses: actions/upload-artifact@v4
+        with:
+          name: "groonga-${version}.artifact"
+          path: "groonga-${version}.artifact"
 
   build:
     name: Build
@@ -264,10 +270,15 @@ jobs:
       - name: Create assets
         run: |
           tar czf ${{ matrix.id }}.tar.gz packages/${TASK_NAMESPACE}/repositories/
+          echo "${{ matrix.id }}.tar.gz" >> "${{ matrix.id }}.artifact"
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.id }}.tar.gz
           path: ${{ matrix.id }}.tar.gz
+      - uses: actions/upload-artifact@v4
+        with:
+          name: "${{ matrix.id }}.artifact"
+          path: "${{ matrix.id }}.artifact"
 
       # Test
       - name: Test
