--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -743,7 +743,7 @@ jobs:
             "${Env:FULL_INSTALL_FOLDER}.zip" `
             "${Env:INSTALL_FOLDER}.zip"
           Add-Content `
-            -Path "${{ env.INSTALL_FOLDER }}.artifact" `
+            -Path "release-${{ env.INSTALL_FOLDER }}.artifact" `
             -Value "${{ env.INSTALL_FOLDER }}.zip"
       - uses: actions/upload-artifact@v4
         with:
@@ -751,8 +751,8 @@ jobs:
           path: ${{ env.INSTALL_FOLDER }}.zip
       - uses: actions/upload-artifact@v4
         with:
-          name: "${{ env.INSTALL_FOLDER }}.artifact"
-          path: "${{ env.INSTALL_FOLDER }}.artifact"
+          name: "release-${{ env.INSTALL_FOLDER }}.artifact"
+          path: "release-${{ env.INSTALL_FOLDER }}.artifact"
       - name: Prepare artifacts with VC++ runtime
         run: |
           Set-PSDebug -Trace 2
@@ -820,7 +820,7 @@ jobs:
             "${Env:FULL_INSTALL_FOLDER_WITH_VCRUNTIME}.zip" `
             "${Env:INSTALL_FOLDER_WITH_VCRUNTIME}.zip"
           Add-Content `
-            -Path "${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.artifact" `
+            -Path "release-${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.artifact" `
             -Value "${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.zip"
       - uses: actions/upload-artifact@v4
         with:
@@ -828,8 +828,8 @@ jobs:
           path: ${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.zip
       - uses: actions/upload-artifact@v4
         with:
-          name: "${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.artifact"
-          path: "${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.artifact"
+          name: "release-${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.artifact"
+          path: "release-${{ env.INSTALL_FOLDER_WITH_VCRUNTIME }}.artifact"
 
       # Test
       - uses: ruby/setup-ruby@v1
