--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -67,6 +67,7 @@ jobs:
   release:
     if: |
       github.ref_type == 'tag'
+    name: Release
     needs: build
     uses: ./.github/workflows/release.yml
     with:
