--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -301,6 +301,7 @@ jobs:
   release:
     if: |
       github.ref_type == 'tag'
+    name: Release
     needs: build
     uses: ./.github/workflows/release.yml
     with:
