--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -121,21 +121,10 @@ jobs:
       # Artifact
       - uses: actions/upload-artifact@v4
         with:
-          name: source
+          name: release-source
           path: |
             groonga-*.tar.gz
             groonga-*.zip
-
-      # Release
-      - name: Upload to release
-        if: |
-          github.ref_type == 'tag'
-        run: |
-          gh release upload ${GITHUB_REF_NAME} \
-            groonga-*.tar.gz \
-            groonga-*.zip
-        env:
-          GH_TOKEN: ${{ github.token }}
 
   build:
     name: Build
@@ -241,7 +230,7 @@ jobs:
             ruby
       - uses: actions/download-artifact@v4
         with:
-          name: source
+          name: release-source
       - name: Update version
         if: |
           !startsWith(github.ref, 'refs/tags/') &&
@@ -277,25 +266,13 @@ jobs:
           rake docker:push
 
       # Artifact
-      - uses: actions/upload-artifact@v4
-        with:
-          name: packages-${{ matrix.id }}
-          path: packages/${{ env.TASK_NAMESPACE }}/repositories/
-
-      # Release
       - name: Create assets
-        if: |
-          startsWith(github.ref, 'refs/tags/')
         run: |
           tar czf ${{ matrix.id }}.tar.gz packages/${TASK_NAMESPACE}/repositories/
-      - name: Upload to release
-        if: |
-          startsWith(github.ref, 'refs/tags/')
-        run: |
-          gh release upload ${GITHUB_REF_NAME} \
-            ${{ matrix.id }}.tar.gz
-        env:
-          GH_TOKEN: ${{ github.token }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: release-${{ matrix.id }}.tar.gz
+          path: ${{ matrix.id }}.tar.gz
 
       # Test
       - name: Test
@@ -318,6 +295,7 @@ jobs:
   release:
     if: |
       github.ref_type == 'tag'
+    name: Release
     needs: build
     uses: ./.github/workflows/release.yml
     with:
