--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -176,7 +176,9 @@ jobs:
           #   timeout-minutes: 120
     env:
       APACHE_ARROW_REPOSITORY: ${{ github.workspace }}/apache-arrow
-    runs-on: ubuntu-latest
+    # We can't use ubuntu-24.04 to build arm64 binary with QEMU.
+    # libc-bin is crashed.
+    runs-on: ubuntu-22.04
     timeout-minutes: ${{ matrix.timeout-minutes || 30 }}
     steps:
       - uses: actions/checkout@v4
