--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -55,8 +55,8 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
     [
       "debian-bookworm",
       "debian-bookworm-arm64",
-      # "debian-trixie",
-      # "debian-trixie-arm64",
+      "debian-trixie",
+      "debian-trixie-arm64",
     ]
   end
 
