--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -110,6 +110,7 @@ repos:
           ?lib/grn_snip\.h|
           ?lib/grn_store\.h|
           ?lib/grn_str\.h|
+          ?lib/grn_table\.h|
           ?lib/grn_table_selector\.h|
           ?lib/grn_token\.h|
           ?lib/grn_token_cursor\.h|
