--- a/config.h.cmake.in
+++ b/config.h.cmake.in
@@ -37,6 +37,10 @@
 #define GRN_PLUGINS_DIR      "${GRN_PLUGINS_DIR}"
 #define GRN_PLUGIN_SUFFIX    "${GRN_PLUGIN_SUFFIX}"
 
+#define GRN_RELATIVE_GGML_BACKENDS_DIR \
+  "${GRN_RELATIVE_GGML_BACKENDS_DIR}"
+#define GRN_GGML_BACKENDS_DIR "${GRN_GGML_BACKENDS_DIR}"
+
 #define GRN_QUERY_EXPANDER_TSV_RELATIVE_SYNONYMS_FILE "${GRN_QUERY_EXPANDER_TSV_RELATIVE_SYNONYMS_FILE}"
 #define GRN_QUERY_EXPANDER_TSV_SYNONYMS_FILE          "${GRN_QUERY_EXPANDER_TSV_SYNONYMS_FILE}"
 
