--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,6 +82,7 @@ repos:
           ?lib/grn_ctx\.hpp|
           ?lib/grn_ctx\.h|
           ?lib/grn_ctx_impl\.h|
+          ?lib/grn_dat\.h|
           ?lib/grn_db\.h|
           ?lib/grn_distance\.hpp|
           ?lib/grn_distance\.h|
