cmake llama.cpp: disable GGML_NATIVE without GGML_CPU_ALL_VARIANTS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1586,6 +1586,10 @@ if(NOT "${GRN_WITH_LLAMA_CPP}" STREQUAL "no")
           endif()
         endif()
       endif()
+      if(NOT GGML_CPU_ALL_VARIANTS)
+	# We need to disable GGML_NATIVE without GGML_CPU_ALL_VARIANTS.
+	set(GGML_NATIVE OFF)
+      endif()
       set(GGML_LLAMAFILE ON)
       set(LLAMA_ALL_WARNINGS OFF)
       fetchcontent_makeavailable(llama_cpp)
