--- a/packages/debian/rules
+++ b/packages/debian/rules
@@ -12,7 +12,7 @@ include /usr/share/dpkg/buildflags.mk
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 %:
-	dh $@
+	dh $@ --without=autoreconf
 
 override_dh_auto_configure:
 	if dpkg -l libarrow-dev > /dev/null 2>&1; then		\
