Reapply "ii: use C++"
This reverts commit 75593f28445466bbc5f19837915457c948b24954.

This didn't reduce performance.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -120,7 +120,7 @@ repos:
           ?lib/grn_vector\.h|
           ?lib/h3\.c|
           ?lib/highlighter\.c|
-          ?lib/ii\.c|
+          ?lib/ii\.cpp|
           ?lib/index_column\.c|
           ?lib/language_model\.cpp|
           ?lib/load\.c|
