clang-format: add lib/com.c

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-# Copyright (C) 2023-2024  Sutou Kouhei <kou@clear-code.com>
+# Copyright (C) 2023-2025  Sutou Kouhei <kou@clear-code.com>
 #
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
@@ -60,6 +60,7 @@ repos:
           ?lib/applier\.c|
           ?lib/arrow\.cpp|
           ?lib/cast\.cpp|
+          ?lib/com\.c|
           ?lib/command_arguments\.cpp|
           ?lib/ctx\.cpp|
           ?lib/ctx_impl_mrb\.c|
