--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -55,8 +55,8 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
     [
       "debian-bookworm",
       "debian-bookworm-arm64",
-      # "debian-trixie",
-      # "debian-trixie-arm64",
+      "debian-trixie",
+      "debian-trixie-arm64",
     ]
   end
 
@@ -83,7 +83,7 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
       "almalinux-9",
       "almalinux-9-aarch64",
       "amazon-linux-2023",
-      # "amazon-linux-2023-aarch64",
+      "amazon-linux-2023-aarch64",
     ]
   end
 
