--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -131,6 +131,7 @@ repos:
           ?lib/mrb/mrb_error\.c|
           ?lib/mrb/mrb_expr\.c|
           ?lib/mrb/mrb_object\.c|
+          ?lib/msgpack\.c|
           ?lib/nfkc\.c|
           ?lib/normalizer\.c|
           ?lib/obj\.c|
