--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -145,6 +145,7 @@ repos:
           ?lib/proc/proc_distance\.c|
           ?lib/proc/proc_dump\.c|
           ?lib/proc/proc_highlight\.c|
+          ?lib/proc/proc_index_column\.c|
           ?lib/proc/proc_object\.c|
           ?lib/proc/proc_object_inspect\.c|
           ?lib/proc/proc_object_list\.c|
