--- a/doc/files.am
+++ b/doc/files.am
@@ -804,6 +804,12 @@ absolute_source_files = \
 	$(top_srcdir)/doc/source/example/reference/suggest/correction/select.log \
 	$(top_srcdir)/doc/source/example/reference/suggest/suggest/select.log \
 	$(top_srcdir)/doc/source/example/reference/token_filters/example-table-create.log \
+	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc-unify-hyphen.rst \
+	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc-unify-kana.rst \
+	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc-unify-to-romaji.rst \
+	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc-version.rst \
+	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc-with-token-mecab.rst \
+	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc.rst \
 	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc100-hiragana-and-kanji.log \
 	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc100-unify-hyphen-and-prolonged-sound-mark.log \
 	$(top_srcdir)/doc/source/example/reference/token_filters/nfkc100-unify-hyphen.log \
@@ -2164,6 +2170,12 @@ source_files_relative_from_doc_dir = \
 	source/example/reference/suggest/correction/select.log \
 	source/example/reference/suggest/suggest/select.log \
 	source/example/reference/token_filters/example-table-create.log \
+	source/example/reference/token_filters/nfkc-unify-hyphen.rst \
+	source/example/reference/token_filters/nfkc-unify-kana.rst \
+	source/example/reference/token_filters/nfkc-unify-to-romaji.rst \
+	source/example/reference/token_filters/nfkc-version.rst \
+	source/example/reference/token_filters/nfkc-with-token-mecab.rst \
+	source/example/reference/token_filters/nfkc.rst \
 	source/example/reference/token_filters/nfkc100-hiragana-and-kanji.log \
 	source/example/reference/token_filters/nfkc100-unify-hyphen-and-prolonged-sound-mark.log \
 	source/example/reference/token_filters/nfkc100-unify-hyphen.log \
@@ -2769,6 +2781,12 @@ po_files = \
 	example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.po \
 	example/reference/normalizers/normalizer-nfkc-version.po \
 	example/reference/normalizers/normalizer-nfkc.po \
+	example/reference/token_filters/nfkc-unify-hyphen.po \
+	example/reference/token_filters/nfkc-unify-kana.po \
+	example/reference/token_filters/nfkc-unify-to-romaji.po \
+	example/reference/token_filters/nfkc-version.po \
+	example/reference/token_filters/nfkc-with-token-mecab.po \
+	example/reference/token_filters/nfkc.po \
 	index.po \
 	install.po \
 	install/almalinux.po \
@@ -3114,6 +3132,12 @@ po_files_relative_from_locale_dir = \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.po \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc-version.po \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc.po \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-hyphen.po \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-kana.po \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-to-romaji.po \
+	LC_MESSAGES/example/reference/token_filters/nfkc-version.po \
+	LC_MESSAGES/example/reference/token_filters/nfkc-with-token-mecab.po \
+	LC_MESSAGES/example/reference/token_filters/nfkc.po \
 	LC_MESSAGES/index.po \
 	LC_MESSAGES/install.po \
 	LC_MESSAGES/install/almalinux.po \
@@ -3459,6 +3483,12 @@ edit_po_files = \
 	example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.edit \
 	example/reference/normalizers/normalizer-nfkc-version.edit \
 	example/reference/normalizers/normalizer-nfkc.edit \
+	example/reference/token_filters/nfkc-unify-hyphen.edit \
+	example/reference/token_filters/nfkc-unify-kana.edit \
+	example/reference/token_filters/nfkc-unify-to-romaji.edit \
+	example/reference/token_filters/nfkc-version.edit \
+	example/reference/token_filters/nfkc-with-token-mecab.edit \
+	example/reference/token_filters/nfkc.edit \
 	index.edit \
 	install.edit \
 	install/almalinux.edit \
@@ -3804,6 +3834,12 @@ edit_po_files_relative_from_locale_dir = \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.edit \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc-version.edit \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc.edit \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-hyphen.edit \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-kana.edit \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-to-romaji.edit \
+	LC_MESSAGES/example/reference/token_filters/nfkc-version.edit \
+	LC_MESSAGES/example/reference/token_filters/nfkc-with-token-mecab.edit \
+	LC_MESSAGES/example/reference/token_filters/nfkc.edit \
 	LC_MESSAGES/index.edit \
 	LC_MESSAGES/install.edit \
 	LC_MESSAGES/install/almalinux.edit \
@@ -4149,6 +4185,12 @@ mo_files = \
 	example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.mo \
 	example/reference/normalizers/normalizer-nfkc-version.mo \
 	example/reference/normalizers/normalizer-nfkc.mo \
+	example/reference/token_filters/nfkc-unify-hyphen.mo \
+	example/reference/token_filters/nfkc-unify-kana.mo \
+	example/reference/token_filters/nfkc-unify-to-romaji.mo \
+	example/reference/token_filters/nfkc-version.mo \
+	example/reference/token_filters/nfkc-with-token-mecab.mo \
+	example/reference/token_filters/nfkc.mo \
 	index.mo \
 	install.mo \
 	install/almalinux.mo \
@@ -4494,6 +4536,12 @@ mo_files_relative_from_locale_dir = \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.mo \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc-version.mo \
 	LC_MESSAGES/example/reference/normalizers/normalizer-nfkc.mo \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-hyphen.mo \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-kana.mo \
+	LC_MESSAGES/example/reference/token_filters/nfkc-unify-to-romaji.mo \
+	LC_MESSAGES/example/reference/token_filters/nfkc-version.mo \
+	LC_MESSAGES/example/reference/token_filters/nfkc-with-token-mecab.mo \
+	LC_MESSAGES/example/reference/token_filters/nfkc.mo \
 	LC_MESSAGES/index.mo \
 	LC_MESSAGES/install.mo \
 	LC_MESSAGES/install/almalinux.mo \
@@ -4872,6 +4920,12 @@ html_files_relative_from_locale_dir = \
 	html/example/reference/normalizers/normalizer-nfkc-unify-voiced-sound-mark-katakana.html \
 	html/example/reference/normalizers/normalizer-nfkc-version.html \
 	html/example/reference/normalizers/normalizer-nfkc.html \
+	html/example/reference/token_filters/nfkc-unify-hyphen.html \
+	html/example/reference/token_filters/nfkc-unify-kana.html \
+	html/example/reference/token_filters/nfkc-unify-to-romaji.html \
+	html/example/reference/token_filters/nfkc-version.html \
+	html/example/reference/token_filters/nfkc-with-token-mecab.html \
+	html/example/reference/token_filters/nfkc.html \
 	html/genindex.html \
 	html/index.html \
 	html/install.html \
