--- a/packages/Rakefile
+++ b/packages/Rakefile
@@ -20,9 +20,8 @@ class GroongaPackageTask < PackagesGroongaOrgPackageTask
 
   def detect_target_apache_arrow_version
     release_url = "https://api.github.com/repos/apache/arrow/releases/latest"
-    release_info = JSON.parse(URI.open(release_url).read)
-    version_tag = release_info["tag_name"]
-    version_tag[/\Aapache-arrow-([\d.]+)\z/, 1]
+    latest_tag_name = JSON.parse(URI.open(release_url).read)["tag_name"]
+    latest_tag_name[/\Aapache-arrow-([\d.]+)\z/, 1]
   end
 
   def detect_target_apache_arrow_so_version
