--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -603,12 +603,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: actions/checkout@v4
-        with:
-          path: apache-arrow
-          ref: apache-arrow-18.0.0
-          repository: apache/arrow
-          submodules: recursive
       # Use CMake 3.27 not 3.26.
       # Workaround: https://github.com/actions/runner-images/issues/8598
       - name: Remove Strawberry Perl
@@ -688,6 +682,18 @@ jobs:
           Get-Command ccache
           (Get-Command ccache).Source
           ccache --show-stats --verbose --version
+      - name: Download Apache Arrow latest source archive and verify via PGP
+        run: |
+          $LATEST_RELEASE_INFO = Invoke-RestMethod "https://api.github.com/repos/apache/arrow/releases/latest"
+          # e.g. "apache-arrow-19.0.0"
+          $APACHE_ARROW_VERSION = $LATEST_RELEASE_INFO.tag_name
+          # "apache-arrow-19.0.0" -> "19.0.0"
+          $ARROW_VERSION = $APACHE_ARROW_VERSION -replace '^apache-', ''
+          $DOWNLOAD_URL = "https://dlcdn.apache.org/arrow/${ARROW_VERSION}/${APACHE_ARROW_VERSION}.tar.gz"
+          Invoke-WebRequest -Uri $DOWNLOAD_URL -OutFile "${APACHE_ARROW_VERSION}.tar.gz"
+          mkdir apache-arrow
+          tar -xzf "${APACHE_ARROW_VERSION}.tar.gz" --strip-components=1 -C apache-arrow
+          Remove-Item "${APACHE_ARROW_VERSION}.tar.gz"
       - name: Set version
         run: |
           "GRN_VERSION=${Env:GROONGA_VERSION}" | Set-Content version.sh
